crates/swc/tests/tsc-references/internalModules/moduleDeclarations/invalidNestedModules/input.ts/es2015.2.minified/output.js
var A, M2;
!function(A1) {
    var B;
    (B || (B = {
    })).C = class {
    }, A1.B = B;
}(A || (A = {
})), (function(M21) {
    var X, Point;
    (X || (X = {
    })).Point = Point, M21.X = X;
})(M2 || (M2 = {
}));
